ok last one I promise, updating namespace

--- a/galaxy.yml
+++ b/galaxy.yml
@@ -1,4 +1,4 @@
-namespace: "shokxi"
+namespace: "thedoubl3j"
 name: "example_collection"
 version: "1.0.0"
 description: "Various pieces of content"
