--- a/galaxy.yml
+++ b/galaxy.yml
@@ -5,7 +5,7 @@ description: "Various pieces of content"
 authors:
   - "Jake Jackson <jljacks93@gmail.com>"
 license:
-  - "GPL-3.0"
+  - "GPL-3.0-or-later"
 repository: "https://www.github.com/thedoubl3j/my_collection"
 readme: README.md
 tags: []
